--- a/js/dio/aulasTrilhaDIO/aula02/assets/css/styles.css
+++ b/js/dio/aulasTrilhaDIO/aula02/assets/css/styles.css
@@ -1,3 +1,5 @@
 body {
-    color: rgb(240, 113, 113);
+    color: rgb(235, 165, 165);
+    background-color: rgb(43, 20, 146);
+    text-justify: auto;
 }
